# npcs-ai-game

./: Cargo.toml
.cargo/: config.toml
assets/map/: map.ldtk  npcs.ldtk  sandbox.ldtk
src/: lib.rs  main.rs
src/enemy/: mod.rs  state_machine.rs  systems.rs
src/map/: mod.rs  plugin.rs  systems.rs
src/player/: controller.rs  mod.rs  plugin.rs  state_machine.rs  systems.rs
src/utils/: macros.rs  mod.rs  position.rs
