[package]
name = "npcs"
version = "0.1.0"
edition = "2021"
exclude = [ "assets/" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = { version = "0.9.1", features = ["dynamic"] } # TODO: Remove this on release
bevy = "0.9.1"
bevy_ecs_ldtk = "0.5.0"
bevy_asset_loader = { version = "0.14.1", features = [
    "2d",
    "stageless",
    "progress_tracking",
    "progress_tracking_stageless",
] }
bevy_rapier2d = "0.20.0"
bevy-inspector-egui = "0.17.0"

# Input and assets releated
iyes_loopless ="0.9.1"
iyes_progress = { version = "0.7.1", features = ["iyes_loopless"] }
leafwing-input-manager = "0.8.0"

# State machines
seldom_state = "0.3.0"
statig = "0.2.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
